--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "lib/nanodbc"]
 	path = lib/nanodbc
-	url = git@github.com:lexicalunit/nanodbc.git
+	url = https://github.com/lexicalunit/nanodbc.git
