--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "lib/nanodbc"]
 	path = lib/nanodbc
 	url = https://github.com/lexicalunit/nanodbc.git
+[submodule "lib/googletest"]
+	path = lib/googletest
+	url = https://github.com/google/googletest.git
