--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,10 @@
 cmake_minimum_required(VERSION 3.0.0)
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
+INCLUDE(MergeStaticLibs)
 
 enable_testing() # needed on top-level CMakeLists.txt
+set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
 # Target doc definition
 # The challenge here is that the sub projects must all define a custom target but with different names to avoid
@@ -19,3 +21,5 @@ set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 add_subdirectory(odbcslap)
+
+add_subdirectory(test)
