--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -4,6 +4,7 @@ set(PROJECT_NAME odbcslap_test)
 project(${PROJECT_NAME})
 
 add_executable(${PROJECT_NAME} ${PROJECT_NAME}.cpp)
-target_link_libraries(${PROJECT_NAME} odbcslap gtest gtest_main)
+
+target_link_libraries(${PROJECT_NAME} odbcslap-static gtest gtest_main)
 
 add_test(NAME ${PROJECT_NAME} COMMAND ${PROJECT_NAME})
