Revert "Remove mysql travis ci test for now due to failure in odbc versioning. #3"
This reverts commit 415930e12ce60e964693144704d5afd70cac04ef.

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,11 @@ ref:
     apt:
       sources: *sources
       packages: *packages
+  mysql: &mysql
+    mysql: "5.5"
+    apt:
+      sources: *sources
+      packages: *packages
   postgresql: &postgresql
     postgresql: "9.1"
     apt:
@@ -43,6 +48,10 @@ matrix:
     - addons: *sqlite
       compiler: gcc
       env: DB=sqlite
+      os: linux
+    - addons: *mysql
+      compiler: gcc
+      env: DB=mysql
       os: linux
     - addons: *postgresql
       compiler: gcc
