--- a/.travis.yml
+++ b/.travis.yml
@@ -37,11 +37,11 @@ ref:
     apt:
       sources: *sources
       packages: *packages
-  mariadb: &mariadb
-    mariadb: "10.2"
-    apt:
-      sources: *sources
-      packages: *packages
+  #mariadb: &mariadb
+  #  mariadb: "10.2"
+  #  apt:
+  #    sources: *sources
+  #    packages: *packages
 
 matrix:
   include:
@@ -57,10 +57,10 @@ matrix:
       compiler: gcc
       env: DB=postgresql
       os: linux
-    - addons: *mariadb
-      compiler: gcc
-      env: DB=mariadb
-      os: linux
+ #   - addons: *mariadb
+ #     compiler: gcc
+ #     env: DB=mariadb
+ #     os: linux
     - compiler: clang
       env: DB=sqlite
       os: osx
