--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -9,5 +9,5 @@ target_link_libraries(${PROJECT_NAME} odbcslap-static gtest gtest_main)
 
 add_test(NAME ${PROJECT_NAME} COMMAND ${PROJECT_NAME})
 
-ENABLE_COVERAGE_REPORT(TARGETS ${PROJECT_NAME})
+#ENABLE_COVERAGE_REPORT(TARGETS ${PROJECT_NAME})
 
